ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/Customer_Code__c.object-meta.xml
<CustomObject>
    <label>Customer Code</label>
    <nameField>
        <label>Customer  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>