ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/fields/Cheque_Return_Count__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Return_Count__c</fullName>
    <label>Cheque Return Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>