ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/fields/Code_type__c.field-meta.xml
<CustomField>
    <fullName>Code_type__c</fullName>
    <label>Code type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>coborrower</fullName>
            </value>
            <value>
                <fullName>Addition Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>