ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>This field will be used to store the customer code value.</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>