ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/fields/CustomerCodeExtId__c.field-meta.xml
<CustomField>
    <fullName>CustomerCodeExtId__c</fullName>
    <externalId>true</externalId>
    <label>CustomerCodeExtId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>