ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/fields/Exposure_API_Response__c.field-meta.xml
<CustomField>
    <fullName>Exposure_API_Response__c</fullName>
    <description>This field will be used to store the Exposure API response captured on Customer Addition Code module.</description>
    <label>Exposure API Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>