ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/fields/IsExposureTriggered__c.field-meta.xml
<CustomField>
    <fullName>IsExposureTriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once Customer code as passed to exposure API then mark this field as true</description>
    <label>IsExposureTriggered</label>
    <type>Checkbox</type>
</CustomField>