ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/fields/Min_Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Deal_Date__c</fullName>
    <label>Min Deal Date</label>
    <type>DateTime</type>
</CustomField>