ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Code_type__c</columns>
    <columns>Customer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>